2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* bootstrap.conf: List gnulib modules in alphabetical order.

2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pk-cmd.c (pk_cmd_exec): Reduce memory allocations.

2020-04-02 Tim Rühsen  <tim.ruehsen@gmx.de>

	* src/pkl-parser.c (pkl_parse_buffer): Add const to buffer param.
	* src/pkl-parser.h (pkl_parse_buffer): Likewise.

2020-04-02  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (The SBM Format): Do not use @acronym{}.

2020-04-02  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Poking Arrays): New section.
	(The SBM Format): New subsection.
	(Poking a SBM Image): Likewise.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_ps_decl): Complete assert expression.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bmp.pk (IHS_BMP_V2): Define.
	(IHS_BMP_V3): Likewise.
	(BMP_Info_Header): Allow info_header_size to be any of the
	supported IHS_* values.
	(BMP_Header): Fix the size of the reserved fields.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/Makefile.am (dist_pkgdata_DATA): Add bmp.pk.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (struct_constructor): Fix handling of anonymous
	fields.
	* testsuite/poke.pkl/scons-54.pk: New test.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.map/maps-arrays-16.pk: Add missing semicolon.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/bmp.pk: Moved from future/ and translated to actual
	Poke.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-trans.c (pkl_trans2_ps_struct_ref): Set the type of the
	newly inserted funcall, since typify1 happens before trans2.
	* testsuite/poke.pkl/struct-method-1.pk: New test.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>

	* etc/git-hooks/pre-push: Try to locate top_builddir and jump
	there before executing make targets.

2020-04-01  Jose E. Marchesi  <jemarch@gnu.org>
